frontend DTO